syntax = "proto3";

option go_package = "./pkg/pb";

package user;

service UserService {
    rpc GetUserById(UserWithID) returns (User) {}
    rpc GetAllUsers(Empty) returns (UsersList) {}
    rpc UpdateUser(User) returns (User) {}
    rpc DeleteUser(UserWithID) returns (Empty) {}
    rpc CreateUser(User) returns (Empty) {}
}

message User {
    int64 id = 1;
    string login = 2;
    string password = 3;
    string name = 4;
    string role = 5;
}

message UsersList {
    repeated User users = 1;
}

message UserWithID {
    int64 id = 1;
}

message Empty {}